{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "f3888ba6-4756-4158-b4c7-9089aeadcd14",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Value",
                    "id": "a3577b6a-30e0-4a17-94ac-421e5f5f08b3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Side",
                    "type": "Value",
                    "id": "d2917eb6-9e85-4722-91cc-d7317e919201",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotationX",
                    "type": "Value",
                    "id": "90ddb4e0-3dda-4103-ada9-1b7c609c5b16",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotationY",
                    "type": "Value",
                    "id": "47782d79-6f80-4342-8a22-647c3bda71b2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "cb443332-a953-4f0f-8f0a-349f75dd5fff",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3261a678-0e3e-447e-b9dd-00dd449ba552",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0188d756-9027-4549-a6f6-4d4a8e8afaa9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "44147564-2ed8-42c2-a2e9-4bf13bea8bdd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ab850f74-3c71-4572-8fdf-0dcaa60abe83",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "581cebc0-5093-4c3b-b4c5-8eec31e2eae4",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "c3074824-8e1e-4cec-83ff-fefa13d6f587",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "26ec137c-598d-4370-b90a-098d706cf650",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e53fc35f-0085-428b-8e0b-48c270306708",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "c00264a1-fef6-481f-834b-2960a524233a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8fb6f4a7-803b-40f1-9e87-02a38d4c9b0f",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "edb16046-9ba5-4c4e-beee-c9b080775df2",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "61d554c6-fddd-4a6a-bb36-c2c758ec4779",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da599962-c997-49aa-b92d-de99f1196f18",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "Scale(factor=15)",
                    "groups": "",
                    "action": "RotationX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0181f4d3-2430-41d0-955f-843d00e26260",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "RotationY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ada922d-8229-4dea-881b-bf2791ecd87d",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "Invert,Scale(factor=15)",
                    "groups": "",
                    "action": "RotationY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}